# epymetheus

./: LICENSE  Makefile  README.md  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  publish.yml
epymetheus/: __init__.py  _utils.py  exceptions.py  trade.py  universe.py  utils.py
epymetheus/benchmarks/: __init__.py  buy_and_hold.py  determined.py  dumb.py  random.py
epymetheus/datasets/: __init__.py  _utils.py  randomwalk.py  usstocks.py  usstocks.txt
epymetheus/metrics/: __init__.py  metrics.py  name.py
epymetheus/stochastic/: __init__.py  brownian.py
epymetheus/strategy/: __init__.py  base.py  container.py
epymetheus/ts/: __init__.py  ts.py
examples/examples/: hypara.py
examples/howto/: history.md  howto.ipynb  howto.py
examples/readme/: readme.py
examples/tutorials/: buy_and_hold.ipynb
tests/: test_misc.py  test_trade.py  test_utils.py
tests/benchmarks/: test_benchmarks.py
tests/datasets/: test_usstocks.py  test_utils.py
tests/issue/: test_129.py
tests/metrics/: test_metrics.py
tests/strategy/: test_base.py  test_container.py
tests/ts/: test_ts.py
