[tool.poetry]
name = "epymetheus"
version = "0.13.0"
description = "Multi-asset Backtesting Framework"
authors = ["Shota Imaki <shota.imaki.0801@gmail.com>"]
license = "BSD-3-Clause"
repository = "https://github.com/epymetheus/epymetheus"

[tool.poetry.dependencies]
python = "^3.6.13"
pandas = "^1.0.0"
numpy = "^1.18.0"
pandas-datareader = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.8.1"
codecov = "^2.1.11"
black = "^21.4b0"
isort = "^5.8.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
skip-magic-trailing-comma = true

[tool.isort]
profile = "black"
force_single_line = true
